# fastapishop

./: .gitignore  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  product.py
items/: crud.py  schemas.py  views.py
users/: crud.py  schemas.py  views.py
