[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["essence- <6elo3epobnt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pytest = "^8.3.3"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pylint = "^3.3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
